--- a/src/sass/pages/_work.scss
+++ b/src/sass/pages/_work.scss
@@ -177,6 +177,7 @@ our-work__archive
         }
 
         article {
+            position: relative;
             margin-bottom: 0;
         }
 
@@ -188,6 +189,17 @@ our-work__archive
         h3 {
             font-weight: var(--weight-regular-plus);
             color: var(--mid-black);
+        }
+
+        .link {
+            &:after {
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                content: '';
+            }
         }
     }
 }
