--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -34,7 +34,7 @@ footer {
 
         .link {
             font-family: var(--copy-med);
-            display: block;
+            //display: block;
         }
 
         a[href^='tel:'] {
@@ -95,11 +95,35 @@ footer {
                 margin-bottom: 1.5rem;
             }
 
+            li {
+                margin-bottom: 4px;
+            }
+
             .link {
+                position: relative;
                 margin-bottom: 0.25rem;
                 font-size: var(--font-plus);
                 text-decoration: none;
                 color: var(--white);
+                overflow: hidden;
+
+                &:after {
+                    content: '';
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                    width: 100%;
+                    height: 1.5px;
+                    background-color: #ffffff;
+                    opacity: 0;
+                    transition: opacity 300ms, transform 300ms;
+                    transform: translateX(0);
+                }
+
+                &:hover:after {
+                    opacity: 1;
+                    transform: translateX(0);
+                }
             }
 
             address {
